src/objects/Service_Fees__c.object
<CustomObject>
    <description>Service Fees for Work Orders</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DateCreated__c</fullName>
        <label>Date Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateModified__c</fullName>
        <label>Date Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InvoiceNo__c</fullName>
        <label>Invoice No</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LastModifiedBy__c</fullName>
        <label>Last Modified By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Service_Date__c</fullName>
        <formula>Related_Work_Order__r.LatestServiceDateEnd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_Practice_Date_of_Initial_Oper__c</fullName>
        <formula>Related_Member_Practice__r.DateofInitialOperation__c</formula>
        <label>Member Practice Date of Initial Oper</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_Practice_State__c</fullName>
        <formula>Related_Member_Practice__r.BillingState</formula>
        <label>Member Practice State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MempracNetBanner__c</fullName>
        <label>Mem prac Net Banner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pic__c</fullName>
        <label>Pic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuickBase_ID__c</fullName>
        <label>QuickBase ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RecordID__c</fullName>
        <label>Record ID#</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecordOwner__c</fullName>
        <label>Record Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelWODHNIDMemPracITAppCaseDateofIntOp23__c</fullName>
        <label>RelWODHNIDMemPracITAppCaseDateofIntOp23</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelWODHNIDMemPracITCaseDteIntOp2__c</fullName>
        <label>RelWODHNIDMemPracITCaseDteIntOp2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Related_Member_Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Member Practice</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Fees</relationshipLabel>
        <relationshipName>Service_Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Work Order</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Service Fees</relationshipLabel>
        <relationshipName>Service_Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sartrac__c</fullName>
        <label>Sartrac #</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ServiceVendor__c</fullName>
        <label>Service Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>Sarcom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rhombus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiband</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brochure install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De-install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WOCurrSchdInstallDate__c</fullName>
        <label>WO Curr Sch&apos;d Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WOMempracDVDSystem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WO Mem prac DVD System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WOofSerDts__c</fullName>
        <label>WO - # of Ser Dts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkOrderMempracDHNID__c</fullName>
        <label>Work Order - Mem prac - DHN ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order_Latest_Service_Date__c</fullName>
        <label>Work Order - Latest Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Work_Order_Member_Practice_BroadBand_Sys__c</fullName>
        <formula>Related_Work_Order__r.Member_Practice_BroadBand_System__c</formula>
        <label>Work Order Member Practice BroadBand Sys</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Order_Type__c</fullName>
        <formula>Text(Related_Work_Order__r.Type)</formula>
        <label>Work Order Type</label>
        <type>Text</type>
    </fields>
    <label>Service Fees</label>
    <listViews>
        <fullName>All_Service_Fees</fullName>
        <columns>NAME</columns>
        <columns>Related_Member_Practice__c</columns>
        <columns>Related_Work_Order__c</columns>
        <columns>InvoiceNo__c</columns>
        <columns>Amount__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>DateCreated__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Service Fees</label>
    </listViews>
    <nameField>
        <displayFormat>ServiceFee-{000000}</displayFormat>
        <label>Service Fees Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Fees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>